# ipa-word-mining

./: .gitignore  README.md  pyproject.toml  requirements.txt  sprache.py
src/: sprache.py
