[project]
name = "ipa-word-mining"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Marco Bischoff", email = "bischoff_m@aim.com"},
]
dependencies = [
    "pandas>=2.2.2",
    "ipython>=8.24.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
